--- a/BaseEngine.vcxproj
+++ b/BaseEngine.vcxproj
@@ -19,6 +19,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Engine\Audio\AudioClip.cpp" />
+    <ClCompile Include="Engine\Audio\AudioManager.cpp" />
+    <ClCompile Include="Engine\Audio\AudioSource.cpp" />
     <ClCompile Include="Engine\Core\Animator.cpp" />
     <ClCompile Include="Engine\Core\Application.cpp" />
     <ClCompile Include="Engine\Core\GameObject.cpp" />
@@ -57,6 +60,9 @@
     <ClCompile Include="Tool\SpriteImporter.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Engine\Audio\AudioClip.h" />
+    <ClInclude Include="Engine\Audio\AudioManager.h" />
+    <ClInclude Include="Engine\Audio\AudioSource.h" />
     <ClInclude Include="Engine\Core\Animator.h" />
     <ClInclude Include="Engine\Core\Application.h" />
     <ClInclude Include="Engine\Core\Component.h" />
@@ -103,6 +109,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Docs\CCD_and_SpatialPartitioning.md" />
+    <None Include="Docs\DevelopmentRoadmap.md" />
     <None Include="Docs\PhysicsSystem.md" />
     <None Include="Docs\Rigidbody2D.md" />
     <None Include="Game\Shaders\Sprite.hlsl">
