--- a/BaseEngine.vcxproj
+++ b/BaseEngine.vcxproj
@@ -47,9 +47,18 @@
     <ClCompile Include="Engine\Physics\Quadtree.cpp" />
     <ClCompile Include="Engine\Physics\Rigidbody2D.cpp" />
     <ClCompile Include="Engine\Resource\AnimationClip.cpp" />
+    <ClCompile Include="Engine\Resource\Font.cpp" />
+    <ClCompile Include="Engine\Resource\FontFile.cpp" />
     <ClCompile Include="Engine\Resource\Resources.cpp" />
     <ClCompile Include="Engine\Resource\SpriteSheet.cpp" />
     <ClCompile Include="Engine\Resource\Texture.cpp" />
+    <ClCompile Include="Engine\UI\Button.cpp" />
+    <ClCompile Include="Engine\UI\Canvas.cpp" />
+    <ClCompile Include="Engine\UI\Image.cpp" />
+    <ClCompile Include="Engine\UI\RectTransform.cpp" />
+    <ClCompile Include="Engine\UI\Text.cpp" />
+    <ClCompile Include="Engine\UI\TextRenderer.cpp" />
+    <ClCompile Include="Engine\UI\UIBase.cpp" />
     <ClCompile Include="Game\main.cpp" />
     <ClCompile Include="Game\Scenes\AnimationScene.cpp" />
     <ClCompile Include="Game\Scenes\MyScene.cpp" />
@@ -57,6 +66,7 @@
     <ClCompile Include="Game\Scripts\MovementController.cpp" />
     <ClCompile Include="Game\Scripts\Player.cpp" />
     <ClCompile Include="Tool\AnimationImporter.cpp" />
+    <ClCompile Include="Tool\FontConverter.cpp" />
     <ClCompile Include="Tool\SpriteImporter.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -92,10 +102,19 @@
     <ClInclude Include="Engine\Physics\Rigidbody2D.h" />
     <ClInclude Include="Engine\Resource\AnimationClip.h" />
     <ClInclude Include="Engine\Resource\Asset.h" />
+    <ClInclude Include="Engine\Resource\Font.h" />
+    <ClInclude Include="Engine\Resource\FontFile.h" />
     <ClInclude Include="Engine\Resource\Prefab.h" />
     <ClInclude Include="Engine\Resource\Resources.h" />
     <ClInclude Include="Engine\Resource\SpriteSheet.h" />
     <ClInclude Include="Engine\Resource\Texture.h" />
+    <ClInclude Include="Engine\UI\Button.h" />
+    <ClInclude Include="Engine\UI\Canvas.h" />
+    <ClInclude Include="Engine\UI\Image.h" />
+    <ClInclude Include="Engine\UI\RectTransform.h" />
+    <ClInclude Include="Engine\UI\Text.h" />
+    <ClInclude Include="Engine\UI\TextRenderer.h" />
+    <ClInclude Include="Engine\UI\UIBase.h" />
     <ClInclude Include="Game\RegisterScenes.h" />
     <ClInclude Include="Game\Scenes\AnimationScene.h" />
     <ClInclude Include="Game\Scenes\MyScene.h" />
@@ -105,6 +124,7 @@
     <ClInclude Include="Game\Scripts\Player.h" />
     <ClInclude Include="Game\Scripts\SceneController.h" />
     <ClInclude Include="Tool\AnimationImporter.h" />
+    <ClInclude Include="Tool\FontConverter.h" />
     <ClInclude Include="Tool\SpriteImporter.h" />
   </ItemGroup>
   <ItemGroup>
@@ -112,6 +132,8 @@
     <None Include="Docs\DevelopmentRoadmap.md" />
     <None Include="Docs\PhysicsSystem.md" />
     <None Include="Docs\Rigidbody2D.md" />
+    <None Include="Docs\Text_Component_Guide.md" />
+    <None Include="Docs\UI_System_Guide.md" />
     <None Include="Game\Shaders\Sprite.hlsl">
       <FileType>Document</FileType>
       <DestinationFolders Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(OutDir)\Shaders\</DestinationFolders>
