--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,8 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
-/Game/Assets/
+# Assets 폴더 내용물 제외 (폴더 구조는 유지)
+!Game/Assets/*
 
 # User-specific files
 *.rsuser
