--- a/BaseEngine.vcxproj
+++ b/BaseEngine.vcxproj
@@ -35,6 +35,7 @@
     <ClCompile Include="Engine\Graphics\D3DDevice.cpp" />
     <ClCompile Include="Engine\Graphics\DebugRenderer.cpp" />
     <ClCompile Include="Engine\Graphics\RendererBase.cpp" />
+    <ClCompile Include="Engine\Graphics\RenderManager.cpp" />
     <ClCompile Include="Engine\Graphics\ShaderManager.cpp" />
     <ClCompile Include="Engine\Graphics\SpriteRenderDevice.cpp" />
     <ClCompile Include="Engine\Graphics\SpriteRenderer.cpp" />
@@ -64,7 +65,8 @@
     <ClCompile Include="Game\Scripts\MovementController.cpp" />
     <ClCompile Include="Game\Scripts\Player.cpp" />
     <ClCompile Include="Tool\AnimationImporter.cpp" />
-    <ClCompile Include="Tool\FontConverter.cpp" />
+    <ClCompile Include="Tool\FontImporter.cpp" />
+    <ClCompile Include="Tool\FontImporterExample.cpp" />
     <ClCompile Include="Tool\SpriteImporter.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -87,6 +89,7 @@
     <ClInclude Include="Engine\Graphics\D3DDevice.h" />
     <ClInclude Include="Engine\Graphics\DebugRenderer.h" />
     <ClInclude Include="Engine\Graphics\RendererBase.h" />
+    <ClInclude Include="Engine\Graphics\RenderManager.h" />
     <ClInclude Include="Engine\Graphics\ShaderManager.h" />
     <ClInclude Include="Engine\Graphics\SpriteRenderDevice.h" />
     <ClInclude Include="Engine\Graphics\SpriteRenderer.h" />
@@ -120,7 +123,7 @@
     <ClInclude Include="Game\Scripts\Player.h" />
     <ClInclude Include="Game\Scripts\SceneController.h" />
     <ClInclude Include="Tool\AnimationImporter.h" />
-    <ClInclude Include="Tool\FontConverter.h" />
+    <ClInclude Include="Tool\FontImporter.h" />
     <ClInclude Include="Tool\SpriteImporter.h" />
   </ItemGroup>
   <ItemGroup>
