--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
 # Assets 폴더 내용물 제외 (폴더 구조는 유지)
+Docs/*
 Game/Assets/*
 !Game/Assets/.gitkeep
 
