mod UI Rendering Pipeline & UI sorting

--- a/BaseEngine.vcxproj
+++ b/BaseEngine.vcxproj
@@ -53,10 +53,12 @@
     <ClCompile Include="Engine\UI\Button.cpp" />
     <ClCompile Include="Engine\UI\Canvas.cpp" />
     <ClCompile Include="Engine\UI\Image.cpp" />
+    <ClCompile Include="Engine\UI\Panel.cpp" />
     <ClCompile Include="Engine\UI\RectTransform.cpp" />
+    <ClCompile Include="Engine\UI\ScrollView.cpp" />
+    <ClCompile Include="Engine\UI\Slider.cpp" />
     <ClCompile Include="Engine\UI\Text.cpp" />
     <ClCompile Include="Engine\UI\UIBase.cpp" />
-    <ClCompile Include="Engine\UI\WorldSpaceText.cpp" />
     <ClCompile Include="Game\main.cpp" />
     <ClCompile Include="Game\Scenes\AnimationScene.cpp" />
     <ClCompile Include="Game\Scenes\MyScene.cpp" />
@@ -106,15 +108,18 @@
     <ClInclude Include="Engine\UI\Button.h" />
     <ClInclude Include="Engine\UI\Canvas.h" />
     <ClInclude Include="Engine\UI\Image.h" />
+    <ClInclude Include="Engine\UI\Panel.h" />
     <ClInclude Include="Engine\UI\RectTransform.h" />
+    <ClInclude Include="Engine\UI\ScrollView.h" />
+    <ClInclude Include="Engine\UI\Slider.h" />
     <ClInclude Include="Engine\UI\Text.h" />
     <ClInclude Include="Engine\UI\UIBase.h" />
-    <ClInclude Include="Engine\UI\WorldSpaceText.h" />
     <ClInclude Include="Game\RegisterScenes.h" />
     <ClInclude Include="Game\Scenes\AnimationScene.h" />
     <ClInclude Include="Game\Scenes\MyScene.h" />
     <ClInclude Include="Game\Scenes\TestScene.h" />
     <ClInclude Include="Game\Scripts\CollisionTest.h" />
+    <ClInclude Include="Game\Scripts\HpControll.h" />
     <ClInclude Include="Game\Scripts\MovementController.h" />
     <ClInclude Include="Game\Scripts\Player.h" />
     <ClInclude Include="Game\Scripts\SceneController.h" />
